--- a/backend/Cargo.toml
+++ b/backend/Cargo.toml
@@ -17,4 +17,5 @@ serde = { version = "1.0.203", features = ["derive"] }
 serde_json = "1.0.117"
 sha2 = "0.10.8"
 sqlx = { version = "0.7.4", default-features = false, features = ["ipnetwork", "json", "macros", "migrate", "uuid"] }
+tokio = { version = "1.39.1", features = ["sync", "time"] }
 uuid = { version = "1.8.0", features = ["serde", "v4"] }
