--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,6 +15,7 @@
     "@nuxtjs/tailwindcss": "^6.12.0",
     "nuxt": "^3.12.2",
     "radix-vue": "^1.9.1",
+    "tailwindcss": "^3.4.7",
     "vue": "^3.4.29",
     "vue-router": "^4.3.3"
   },
