--- a/backend/Cargo.toml
+++ b/backend/Cargo.toml
@@ -4,7 +4,9 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
-chrono = "0.4.38"
+actix = "0.13.5"
+chrono = { version = "0.4.38", features = ["serde"] }
+futures = "0.3.30"
 hmac = "0.12.1"
 jwt = "0.16.0"
 lazy_static = "1.5.0"
@@ -17,5 +19,5 @@ serde = { version = "1.0.203", features = ["derive"] }
 serde_json = "1.0.117"
 sha2 = "0.10.8"
 sqlx = { version = "0.7.4", default-features = false, features = ["ipnetwork", "json", "macros", "migrate", "uuid"] }
-tokio = { version = "1.39.1", features = ["sync", "time"] }
+tokio = { version = "1.39.1", features = ["macros", "sync", "time"] }
 uuid = { version = "1.8.0", features = ["serde", "v4"] }
