--- a/backend/Cargo.toml
+++ b/backend/Cargo.toml
@@ -17,6 +17,7 @@ rocket_db_pools = { version = "0.2.0", features = ["sqlx_sqlite"] }
 rocket_oauth2 = "0.5.0"
 serde = { version = "1.0.203", features = ["derive"] }
 serde_json = "1.0.117"
+serde_yaml = "0.9.34"
 sha2 = "0.10.8"
 sqlx = { version = "0.7.4", default-features = false, features = ["ipnetwork", "json", "macros", "migrate", "uuid"] }
 tokio = { version = "1.39.1", features = ["macros", "sync", "time"] }
