--- a/backend/Cargo.toml
+++ b/backend/Cargo.toml
@@ -10,6 +10,7 @@ futures = "0.3.30"
 hmac = "0.12.1"
 jwt = "0.16.0"
 lazy_static = "1.5.0"
+regex = "1.10.5"
 reqwest = { version = "0.12.5", features = ["json"] }
 rocket = { version = "0.5.1", features = ["json", "uuid"] }
 rocket_cors = "0.6.0"
